2002-05-23 Andrej Borsenkow  <bor@zsh.org>

	* unposted: Completion/Redhat/Command/_service: uncomment
	zstyle now that it works (c.f. 17148)

	* 17125, 17159 (Oliver): Completion/Unix/Command/_texinfo,
	Completion/Unix/Command/.distfiles: completion for info.
	As suggested by Oliver put in _texinfo expecting more
	related stuff.

2002-05-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 17196: Src/Zle/computil.c: report option arguments to
	_arguments in the original form

	* 17214: Completion/Base/Utility/_arguments: for automatic long
	options completion, use the string after the equal signs (from
	the --help-text) as the description to shown when completing
	after the option

	* 17213: Completion/Base/Utility/_describe,
	Completion/Zsh/Command/_zstyle, Doc/Zsh/compsys.yo: rename
	max-match-length style to max-matches-width

	* 17212: Src/Zle/computil.c: allow multiple lines in option
	completion lists to share the same description, for (hopefully)
	cleaner displays

2002-05-23  Clint Adams  <clint@zsh.org>

	* Matt Zimmerman: 17211: Completion/Unix/Command/_cvs:
	respect $CVSIGNORE.

2002-05-21  Peter Stephenson  <pws@csr.com>

	* 17201: Doc/Zsh/mod_tcp.yo: add example use of ztcp.

	* 17141 plus mods: Src/utils.c, Src/Zle/zle_main.c,
	Src/Zle/zle_thingy.c, Doc/Zsh/zle.yo: `zle -F fd handler'
	installs shell function handler for when data becomes available
	on fd while zle is active.  Requires select().

2002-05-21  Sven Wischnowsky  <wischnow@zsh.org>

	* 17195: Src/Zle/comp.h, Src/Zle/compcore.c, Src/Zle/compctl.c,
	Src/Zle/complist.c, Src/Zle/compresult.c: fix for
	file-type-tests in nested quotes and don't count space
	file-type-character

	* 17194: Src/Zle/computil.c: improve calculation of used
	columns for match-max-length

	* 17193: Completion/Unix/Command/_init_d: let _init_d use a
	pre-pattern

	* 17192: Src/Zle/compcore.c: fix for completion in nested
	quotes where the sub-word ends in a backslash

	* 17191: Completion/Base/Utility/_arguments,